--- a/lib/tasks/_config.yml
+++ b/lib/tasks/_config.yml
@@ -1,64 +1,84 @@
 dirs: [admin, home]
 tables:
-   admin:
-      first_name: string
-      last_name: string
-      password: string
-      status: integer
-      image_url: string
-   patient:
-      tc: string
-      file_no: integer
-      first_name: string
-      last_name: string
-      gender: boolean
-      phone: integer
-      email: string
-      image_url: string
-      birthday: date
-      birthplace: string
-      insurance: boolean
-   department:
-      name: string
-   doctor:
-      department_id: integer
-      first_name: string
-      last_name: string
-   consult:
-      patient_id: integer
-      doctor_id: integer
-      date: datetime
-      payment: boolean       # ödeme yapılırsa "true"
-   invoice:
-      consult_id: integer
-      product_id: integer    # drug_id veya trial_id
-      product_type: boolean
-      price: integer
-   trial_history:
-      trial_request_id: integer
-      request_admin_id: integer
-      reply_admin_id: integer
-   trial_request:
-      consult_id: integer
-      trial_type_id: integer
-      state: boolean
-   trial_result:
-      trial_request_id: integer
-      sequence: integer
-      trial_id: integer
-      min_range: integer
-      max_range: integer
-      result: integer
-   trial:
-      trial_type_id: integer
-      name: string
-      min_range: integer  # default değer için
-      max_range: integer  # default değer için
-      units: string
-   trial_type:
-      name: string
-      price: integer      # default değer için
-   drug:
-     name: string
-     content: text
-     price: integer       # default değer için
+  admin:
+    first_name: string
+    last_name: string
+    password: string
+    status: integer
+    image_url: string
+  patient:
+    blood_group_id: integer
+    tc: string
+    file_no: integer
+    first_name: string
+    last_name: string
+    gender: boolean
+    phone: integer
+    email: string
+    adress: text
+    image_url: string
+    birthday: date
+    birthplace: string
+    mother_name: string
+    father_name: string
+  department:
+    name: string
+  doctor:
+    department_id: integer
+    first_name: string
+    last_name: string
+  consult:
+    patient_id: integer
+    doctor_id: integer
+    date: datetime
+    reply_admin_id: integer
+    payment: boolean     # ödeme yapılırsa "true"
+    state: boolean       # işlem yapılırsa "true"
+  invoice:
+    consult_id: integer
+    product_id: integer    # drug_id veya trial_id
+    product_type: boolean
+    sequence: integer
+    price: integer
+  trial_request:
+    consult_id: integer
+    trial_type_id: integer
+    request_admin_id: integer
+    reply_admin_id: integer
+    sequence: integer
+    state: boolean
+  trial_result:
+    trial_request_id: integer
+    trial_id: integer
+    min_range: integer
+    max_range: integer
+    result: integer
+  trial_storage:
+    trial_type_id: integer
+    sequence: integer
+  trial:
+    trial_type_id: integer
+    name: string
+    min_range: integer  # default değer için
+    max_range: integer  # default değer için
+    units: string
+  trial_type:
+    name: string
+    price: integer      # default değer için
+  drug_use:
+    consult_id: integer
+    drug_id: integer
+    sequence: integer
+    content: text
+    start_time: date
+    end_time: date
+  drug_storage:
+    drug_id: integer
+    sequence: integer
+  drug:
+    name: string
+    content: text
+    expiry_date: date
+    price: integer      # default değer için
+  blood_group:
+    name: string
